Se logro instanciar el objeto para la muestra de videos

--- a/index.html
+++ b/index.html
@@ -10,11 +10,13 @@
 	<link rel="stylesheet" type="text/css" href="css/font-awesome.min.css">
 	<link rel="stylesheet" type="text/css" href="css/main.css" />
 
-	<script type="text/javascript" src='js/jquery-1.10.1.min.js'></script>
+	<script type="text/javascript" src='js/jquery-1.8.3.min.js'></script>
 	<script src="http://ajax.googleapis.com/ajax/libs/jqueryui/1.9.1/jquery-ui.min.js"></script>
-	
+	<script src="https://www.youtube.com/iframe_api" type="text/javascript"></script>
 	<script type="text/javascript" src="js/jquery.fullPage.js"></script>
 	<script type="text/javascript" src="js/examples.js"></script>
+
+	
 
 	<script type="text/javascript" src='js/main.js'></script>
 
@@ -57,12 +59,10 @@
 			<div class="slide" id="slide1" data-anchor="slide1">
 				<h1 class="tituloVideos">Paga recibos desde </br>tu smartphone</h1>
 				<h2 class="subTituloVideo">¡Con la nueva interban App, pagar tus recibos es más fácil que tomarte un selfie!</h2>
+				
+				<div id="video1" data-div="video1" data-video="u8M9bwFrOfo" class="iframe_video"></div>
 			</div>
 
-			<div class="slide" id="slide1" data-anchor="slide1">
-				<h1 class="tituloVideos">es la nueva </br>Interbank App</h1>
-				<h2 class="subTituloVideo">Lo más fácil de tu Smartphone,</h2>
-			</div>
 			
 		    <a class="callToInternas">
 				<img class='appleButton' src="img/appleButton.png" width="202" height="57">
@@ -73,5 +73,6 @@
 			
 		</div>
 	</div>
+	
 </body>
 </html>
