--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
 
 	<script type="text/javascript" src='js/jquery-1.8.3.min.js'></script>
 	<script src="http://ajax.googleapis.com/ajax/libs/jqueryui/1.9.1/jquery-ui.min.js"></script>
+	<script type="text/javascript" src='js/greensock/TweenMax.min.js'></script>
 	<script src="https://www.youtube.com/iframe_api" type="text/javascript"></script>
 	<script type="text/javascript" src="js/jquery.fullPage.js"></script>
 	<script type="text/javascript" src="js/examples.js"></script>
@@ -32,7 +33,10 @@
 	</div>
 	<div class="head">
 		<img src="img/logoHead.jpg" width="173" height="23">
-		<div class="botonMenu"></div>
+		<div class="botonMenu">
+			<div class="raya" id="raya1"><img src="img/rayita.png"></div>
+			<div class="raya" id="raya2"><img src="img/rayita.png"></div>
+		</div>
 	</div>
 	<div id="fullpage" class="envoltura">
 
