Gestion de videos Play y Pause en fullPage

--- a/index.html
+++ b/index.html
@@ -25,10 +25,10 @@
 <body>
 	<div class="menuContextual">
 		<ul class="contextual">
-			<li class="opc"><a href="">Inicio</a></li>
-			<li class="opc"><a href="">Conoce</a></li>
-			<li class="opc"><a href="">Aprende</a></li>
-			<li class="opc"><a href="">¿Preguntas?</a></li>
+			<li class="opc"><a href="#home">Inicio</a></li>
+			<li class="opc"><a href="#conoce">Conoce</a></li>
+			<li class="opc"><a href="#aprende">Aprende</a></li>
+			<li class="opc"><a href="#preguntas">¿Preguntas?</a></li>
 		</ul>
 	</div>
 	<div class="head">
