Maquetado y animado del wraning al poner el device en Landscape

--- a/index.html
+++ b/index.html
@@ -23,6 +23,11 @@
 
 </head>
 <body>
+<div class="warning">
+	<p class="aviso">Para una mejor experiencia gira tu dispositivo</p>
+	<img src="img/iconoMobile.png">
+</div>
+
 	<div class="menuContextual">
 		<ul class="contextual">
 			<li class="opc"><a href="#home">Inicio</a></li>
@@ -149,6 +154,7 @@
                 <div class="clear"></div>
 			</div>
 
+			<!-- slide 4 -->
 			<div class="slide" id="slide1" data-anchor="slide1">
 				<p class="title btn_recibos">Paga tus recibos</p>
 				<div class="left">Paso  1</div>
@@ -162,6 +168,7 @@
 				<div class="clear"></div>
 			</div>
 
+			<!-- slide 5 -->
 			<div class="slide" id="slide1" data-anchor="slide1">
 				<p class="title btn_transfiere">Transfiere dinero</p>
                 <div class="left">Paso  1</div>
@@ -181,6 +188,7 @@
                 <div class="clear"></div>
 			</div>
 
+			<!-- slide 6 -->
 			<div class="slide" id="slide1" data-anchor="slide1">
 				<p class="title btn_pagosfre">Graba pagos frecuentes</p>
 				<div class="left">Paso  1</div>
@@ -198,6 +206,86 @@
 				<img class='appleButton' src="img/appleButton.png" width="202" height="57">
 				<img class='googleButton' src="img/googleButton.png" width="202" height="57">
 			</a>
+		</div>
+
+		<div class="section faqsec" id="section3">
+			<h1 class="tituloPreguntas">Preguntas Frecuentes</h1>
+			<!-- slide 1 -->
+			<div class="slide" id="slide1" data-anchor="slide1">
+				<h2 class="faq01">Soy nuevo usuario, ¿cómo me registro desde la aplicación? </h2>
+                <div class="contnt_txt">
+                    <ul class="listui">
+                        <li class="n1">
+                            Ingresa el número de tu tarjeta y clave de cajero de 4 dígitos.
+                        </li>
+                        <li class="n2">
+                            Crea tu clave web.
+                        </li>
+                        <li class="n3">
+                            Lee y acepta los Términos y Condiciones.
+                        </li>
+                        <li class="n4">
+                            Finalmente, ingresa con tu nueva clave web, la cual podrás usar en la aplicación móvil como en la Banca por Internet
+                        </li>
+                    </ul>
+                </div>
+                <div class="clear"></div>
+			</div>
+
+			<!-- slide 2 -->
+			<div class="slide" id="slide2" data-anchor="slide2">
+				<h2 class="faq02">¿Qué es la clave web? </h2>
+                <div class="contnt_txt">
+                    <ul>
+                        <li>
+                            Es una clave, de 6  a 16 caracteres, que te permitirá ingresar a nuestra Banca por Internet y también a la Interbank APP. Podrás crearla ingresando tu número de tarjeta y clave de cajero en nuestra Banca por Internet o desde la aplicación móvil, y una vez ingresada será exclusiva para ingresar a ambos canales.
+                        </li>
+                    </ul>
+                    <div class="clear"></div>
+                </div>
+			</div>
+
+			<!-- slide 3 -->
+			<div class="slide" id="slide3" data-anchor="slide3">
+				<h2 class="faq03">¿Qué es la clave SMS? </h2>
+                <div class="contnt_txt">
+	                <ul>
+	                    <li>
+	                        Es una clave aleatoria que llega a tu celular a través de un mensaje de texto y es necesaria para confirmar tus pagos y transferencias a terceros. Este es un servicio gratuito y solo para clientes Claro y Movistar.<br/>
+	                        Si tienes otro operador, deberás solicitar un token a través de la Banca por Internet y solo podrás hacer operaciones a terceros a través de la Banca por Internet.
+	                    </li>
+	                </ul>
+	                <div class="clear"></div>
+	            </div>
+			</div>
+
+			<!-- slide 4 -->
+			<div class="slide" id="slide4" data-anchor="slide4">
+				<h2 class="faq04">¿Puedo realizar operaciones desde la Interbank App con mi token? </h2>
+                <div class="contnt_txt">
+                    <ul>
+                        <li>
+                            Si no tienes un celular Claro o Movistar, deberás solicitar un token y solo así podrás realizar tus operaciones a través de la Banca por Internet.
+                        </li>
+                    </ul>
+                    <div class="clear"></div>
+                </div>
+			</div>
+
+			<!-- slide 5 -->
+			<div class="slide" id="slide5" data-anchor="slide5">
+				<h2 class="faq05">¿Qué pasa si olvidé mi clave web? </h2>
+                <div class="contnt_txt">
+                    <ul>
+                        <li>
+                            Deberás ingresar a nuestra Banca por Internet, y seleccionar la opción “Olvidaste tu clave?”. Aquí ingresarás tu número de tarjeta y clave de cajero de 4 digitos para crear una nueva contraseña web.
+                        </li>
+                    </ul>
+                    <div class="clear"></div>
+                </div>
+			</div>
+
+
 		</div>
 	</div>
 	
