agrege anchor al boton del home para que baje a la siguiente pagina

--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
 				<img src="img/legal_free_mobil.png">
 			</div>
 
-			<a class="nextPag">
+			<a class="nextPag" href="#conoce">
 				Ver más
 				<i class="fa fa-chevron-down fa-fw fa-3x"></i>
 			</a>
