Textos Actualizados con los Ultimos JPPG de Joaquin

--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@
 			<div class="slide" id="slide1" data-anchor="slide1">
 				<p class="title btn_consulta">Consulta tu saldo</p>
 	            <div class="left">Paso  1</div>
-	            <div class="right">¡Inicia sesión y listo!</div>
+	            <div class="right">¡Ingresa el Nº de tu tarjeta, clave y listo!</div>
 	            <div class="clear"></div>
 			</div>
 
@@ -139,32 +139,35 @@
 
 			<!-- slide 3 -->
 			<div class="slide" id="slide1" data-anchor="slide1">
-				<p class="title btn_mtarjeta">Paga múltiples tarjetas</p>
+				<p class="title btn_mtarjeta">Paga tarjetas de credito</p>
                 <div class="left">Paso  1</div>
-                <div class="right">En “Operaciones” elige “Pagar tarjeta”.</div>
+                <div class="right">En “Operaciones” selecciona “Pagar tarjeta”.</div>
                 <div class="clear"></div>
                 <div class="left">Paso  2</div>
                 <div class="right">Selecciona la cuenta con la que pagarás.</div>
                 <div class="clear"></div>
                 <div class="left">Paso  3</div>
-                <div class="right">Elige el banco e ingresa los datos</div>
+                <div class="right">Selecciona tu tarjeta Interbank o de otro banco, e ingresa los datos</div>
                 <div class="clear"></div>
                 <div class="left">Paso  4</div>
-                <div class="right">Pega la clave SMS que te llegará¡y listo!</div>
+                <div class="right">Ingresa la clave SMS que te llegará por un mensaje de texto ¡y listo!</div>
                 <div class="clear"></div>
 			</div>
 
 			<!-- slide 4 -->
 			<div class="slide" id="slide1" data-anchor="slide1">
-				<p class="title btn_recibos">Paga tus recibos</p>
+				<p class="title btn_recibos">Paga recibos</p>
 				<div class="left">Paso  1</div>
-				<div class="right">En “Operaciones” elige “Pagar recibos”.</div>
+				<div class="right">En “Operaciones” selecciona “Pagar recibos”.</div>
 				<div class="clear"></div>
 				<div class="left">Paso  2</div>
-				<div class="right">Elige el servicio que quieras pagar.</div>
+				<div class="right">Selecciona el servicio que quieras pagar.</div>
 				<div class="clear"></div>
 				<div class="left">Paso  3</div>
-				<div class="right">Ingresa la clave SMS que te llegará ¡y listo!</div>
+				<div class="right">Selecciona la cuenta con la que pagarás.</div>
+				<div class="clear"></div>
+				<div class="left">Paso  4</div>
+				<div class="right">Ingresa la clave SMS que te llegará por mensaje de texto ¡y listo!</div>
 				<div class="clear"></div>
 			</div>
 
@@ -172,16 +175,16 @@
 			<div class="slide" id="slide1" data-anchor="slide1">
 				<p class="title btn_transfiere">Transfiere dinero</p>
                 <div class="left">Paso  1</div>
-                <div class="right">En “Operaciones” elige “Transferir dinero”.</div>
+                <div class="right">En “Operaciones” selecciona “Transferir dinero”.</div>
                 <div class="clear"></div>
                 <div class="left">Paso  2</div>
                 <div class="right">Selecciona la cuenta con la que pagarás.</div>
                 <div class="clear"></div>
                 <div class="left">Paso  3</div>
-                <div class="right">Selecciona la cuenta de destino.</div>
+                <div class="right">Selecciona la cuenta de destino en Interbank o de otros bancos.</div>
                 <div class="clear"></div>
                 <div class="left">Paso  4</div>
-                <div class="right">Ingresa el monto y confirma la operación.</div>
+                <div class="right">Ingresa código interbancario, el monto y confirma la operación.</div>
                 <div class="clear"></div>
                 <div class="left">Paso  5</div>
                 <div class="right">Ingresa la clave SMS que te llegará ¡y listo!</div>
@@ -190,15 +193,29 @@
 
 			<!-- slide 6 -->
 			<div class="slide" id="slide1" data-anchor="slide1">
-				<p class="title btn_pagosfre">Graba pagos frecuentes</p>
+				<p class="title btn_pagosfre">Graba tus operaciones frecuentes</p>
 				<div class="left">Paso  1</div>
-				<div class="right">Realiza cualquier pago o transferencia.</div>
+				<div class="right">Realiza cualquier pago, recarga o transferencia. Antes de terminar, selecciona “Guardar como operación frecuente” e ingresa un nombre para la misma</div>
 				<div class="clear"></div>
 				<div class="left">Paso  2</div>
-				<div class="right">Al terminar, activa “Guardar como operación frecuente”. </div>
+				<div class="right">¡Listo! El APP guardará tus pagos frecuentes en la primera pantalla de operaciones.</div>
+				<div class="clear"></div>
+			</div>
+
+			<!-- slide 7 -->
+			<div class="slide" id="slide1" data-anchor="slide1">
+				<p class="title btn_grabfre">Recargas</p>
+				<div class="left">Paso  1</div>
+				<div class="right">En “Operaciones” selecciona “Pagar Recibos y Recargas”.</div>
+				<div class="clear"></div>
+				<div class="left">Paso  2</div>
+				<div class="right">Selecciona la cuenta con la que pagarás.</div>
 				<div class="clear"></div>
 				<div class="left">Paso  3</div>
-				<div class="right">¡Listo! El APP te avisará cuando necesites pagar de nuevo.</div>
+				<div class="right">Elige tu operador móvil e ingresa el monto.</div>
+				<div class="clear"></div>
+				<div class="left">Paso  4</div>
+				<div class="right">Confirma la operación con tu clave SMS y listo.</div>
 				<div class="clear"></div>
 			</div>
 
