Se cerraron los estilos para Moviles de alta gama - Y correcciones QA

--- a/index.html
+++ b/index.html
@@ -204,7 +204,7 @@
 
 			<!-- slide 7 -->
 			<div class="slide" id="slide1" data-anchor="slide1">
-				<p class="title btn_grabfre">Recargas</p>
+				<p class="title btn_grabfre">Recarga</p>
 				<div class="left">Paso  1</div>
 				<div class="right">En “Operaciones” selecciona “Pagar Recibos y Recargas”.</div>
 				<div class="clear"></div>
@@ -226,7 +226,7 @@
 		</div>
 
 		<div class="section faqsec" id="section3">
-			<h1 class="tituloPreguntas">Preguntas Frecuentes</h1>
+			<h1 class="tituloPreguntas">Preguntas frecuentes</h1>
 			<!-- slide 1 -->
 			<div class="slide" id="slide1" data-anchor="slide1">
 				<h2 class="faq01">Soy nuevo usuario, ¿cómo me registro desde la aplicación? </h2>
