Se corrigio las correcvciones QA

--- a/index.html
+++ b/index.html
@@ -139,7 +139,7 @@
 
 			<!-- slide 3 -->
 			<div class="slide" id="slide1" data-anchor="slide1">
-				<p class="title btn_mtarjeta">Paga tarjetas de credito</p>
+				<p class="title btn_mtarjeta">Paga tarjetas de crédito</p>
                 <div class="left">Paso  1</div>
                 <div class="right">En “Operaciones” selecciona “Pagar tarjeta”.</div>
                 <div class="clear"></div>
@@ -255,7 +255,7 @@
                 <div class="contnt_txt">
                     <ul>
                         <li>
-                            Es una clave, de 6  a 16 caracteres, que te permitirá ingresar a nuestra Banca por Internet y también a la Interbank APP. Podrás crearla ingresando tu número de tarjeta y clave de cajero en nuestra Banca por Internet o desde la aplicación móvil, y una vez ingresada será exclusiva para ingresar a ambos canales.
+                            Es una clave, de 6  a 16 caracteres, que te permitirá ingresar a nuestra Banca por Internet y también al Interbank App. Podrás crearla ingresando tu número de tarjeta y clave de cajero en nuestra Banca por Internet o desde la Interbank App, y una vez creada será exclusiva para ingresar por ambos canales.
                         </li>
                     </ul>
                     <div class="clear"></div>
@@ -295,7 +295,8 @@
                 <div class="contnt_txt">
                     <ul>
                         <li>
-                            Deberás ingresar a nuestra Banca por Internet, y seleccionar la opción “Olvidaste tu clave?”. Aquí ingresarás tu número de tarjeta y clave de cajero de 4 digitos para crear una nueva contraseña web.
+                            Deberás ingresar a nuestra Banca por Internet, y seleccionar la opción “¿Olvidaste tu clave?”. Aquí colocarás tu número de tarjeta y clave de cajero automático para crear una nueva contraseña web.
+
                         </li>
                     </ul>
                     <div class="clear"></div>
