--- a/index.html
+++ b/index.html
@@ -11,7 +11,16 @@
 	<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.8.3/jquery.min.js"></script>
 	<script src="http://ajax.googleapis.com/ajax/libs/jqueryui/1.9.1/jquery-ui.min.js"></script>
 
-		
+	<!-- Estilos para el FullPAge-js -->
+	<link rel="stylesheet" href="js/fullPage/jquery.fullPage.css" />
+	<link rel="stylesheet" href="js/fullPage/examples.css" />
+	
+	<!-- js para el fullPage -->
+	<script type="text/javascript" src="js/fullpage/vendors/jquery.slimscroll.min.js"></script>
+
+	<script type="text/javascript" src="js/fullpage/jquery.fullPage.js"></script>
+	<script type="text/javascript" src="js/fullpage/examples.js"></script>
+	
 	<style>
 </head>
 <body>
