--- a/simulador.html
+++ b/simulador.html
@@ -17,16 +17,23 @@
       top: 50%; 
       left: 50%;
       transform: translate(-50%, -50%);
-      background-color: peru;
+      background-color: white;
     }
-		body{margin:0;}
+		body{margin:0;
+    }
+    .phone{
+      position: absolute;
+      top: 49%; 
+      left: 50%;
+      transform: translate(-50%, -50%);
+    }
 		h1{font-family:'omnessemibold';}
 		
 				
 	</style>
 </head>
 <body>
-		
+  <img class ="phone" src="img/simulador/phone.jpg">
 	</div>
 	 <canvas id="myCanvas" width="250" height="426"></canvas>
 </body> 
