se agrego el switch en la 4ta vista del 2do contenedor

--- a/simulador.html
+++ b/simulador.html
@@ -10,27 +10,7 @@
 	<script src="js/createjs/createjs-2014.12.12.min.js"></script>
 	<script type="text/javascript" src="js/simulador.js"></script>
   <script type="text/javascript" src="js/greensock/TweenMax.min.js"></script>
-	
-	<style type="">
-	canvas{
-      position: absolute;
-      top: 50%; 
-      left: 50%;
-      transform: translate(-50%, -50%);
-      background-color: white;
-    }
-		body{margin:0;
-    }
-    .phone{
-      position: absolute;
-      top: 49%; 
-      left: 50%;
-      transform: translate(-50%, -50%);
-    }
-		h1{font-family:'omnessemibold';}
-		
-				
-	</style>
+  <link rel="stylesheet" type="text/css" href="css/simulador.css">
 </head>
 <body>
   <img class ="phone" src="img/simulador/phone.jpg">
