Se actualizaron los cambios solicitados por cliente

--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
 	</div>
 
 	<!-- Aqui inicia el FullPage -->
-	<div id="fullpage">
+	<div id="fullpage" class="envoltura">
 		<!-- Seccion 0 - HOME -->
 		<div class="section " id="section0">
 			<h2 class="subTituloHome">Lo más fácil de tu Smartphone,</h2>
