Estan listos los overs de los mesnus

--- a/simulador.html
+++ b/simulador.html
@@ -3,7 +3,7 @@
 <head>
 	<meta chartset='utf-8' />
 	<meta name="viewport" content="user-scalable=no,initial-scale=1">
-	<title>Video Control</title>
+	<title>Simulador - App Interbank</title>
 	<script type="text/javascript" src='js/jquery-1.10.1.min.js'></script>
 	<!--<script type="text/javascript" src='js/createjs/createjs-2013.05.14.min.js'></script>
 	<script type="text/javascript" src='js/createjs/preloadjs-0.3.1.min.js'></script>-->
