Se configuro para seleccionar

--- a/simulador.html
+++ b/simulador.html
@@ -13,7 +13,7 @@
   <link rel="stylesheet" type="text/css" href="css/simulador.css">
 </head>
 <body>
-  <img class ="phone" src="img/simulador/phone.jpg">
+  <img class ="phone" src="img/simulador_android/phone.jpg">
 	</div>
 	 <canvas id="myCanvas" width="250" height="426"></canvas>
 </body> 
