Se corrigieron lo solicitado interbank

--- a/index.html
+++ b/index.html
@@ -51,8 +51,8 @@
 			<img src="img/logoHead.jpg" width="173" height="23">
 		</a>
 		<div class="botonMenu">
-			<img src="img/tresrayas.jpg" alt="">
-			
+			<img class='tresrayas' src="img/tresrayas.jpg" alt="">
+			<img class='equis' src="img/equis.jpg" alt="">
 			<!--
 			<div class="raya" id="raya1"><img src="img/rayita.png"></div>
 			<div class="raya" id="raya2"><img src="img/rayita.png"></div>
@@ -138,7 +138,7 @@ frecuentes en la nueva Interbank APP!</h2>
 			<!-- slide 1 -->
 			<div class="slide" id="slide1" data-anchor="slide1">
 				<p class="title btn_consulta">Consulta tu saldo</p>
-	            <div class="left">Paso  1</div>
+	            <div class="left">-</div>
 	            <div class="right">¡Ingresa el Nº de tu tarjeta, clave y listo!</div>
 	            <div class="clear"></div>
 			</div>
